# JARVIS

./: .env.example  .gitignore  CONTEXTO.MD  Dockerfile
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_adiciona_campos_whatsapp_em_pessoas.py  b1d20c661108_adiciona_historico_notificacoes.py  c4b9cce778a0_adiciona_tabela_lembretes.py  c9ac3c47c0ad_cria_tabelas_iniciais.py  dffb7c84dba5_adiciona_tabela_eventos.py  e146f61fceae_adiciona_tabelas_livros_chunks_e_.py  f22aa210c728_adiciona_tabelas_checklist_listas_e_.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  redis.py  scheduler.py  security.py  webpush.py
backend/app/middleware/: cors.py  rate_limit.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/briefing/: service.py
backend/app/modules/chat/: models.py  router.py  schemas.py  service.py
backend/app/modules/checklist/: models.py  router.py  schemas.py  service.py
backend/app/modules/config/: models.py  router.py  schemas.py  service.py
backend/app/modules/custos/: router.py  service.py
backend/app/modules/ia/: prompts.py  service.py
backend/app/modules/lembretes/: models.py  router.py  schemas.py  service.py
backend/app/modules/livros/: models.py  router.py  schemas.py  service.py
backend/app/modules/memoria/: models.py  router.py  schemas.py  service.py
backend/app/modules/notificacoes/: models.py  router.py  schemas.py  service.py
backend/scripts/: backfill_eventos.py  seed_pessoas_teste.py  teste_parsers_deepseek.py
(+57 files in other folders)
